feat: collect benchmark suite observations